@@ -203,7 +203,8 @@ class FileInput(Input):
     """
     def __init__(self, source=None, source_path=None,
                  encoding=None, error_handler='strict',
-                 autoclose=True, mode='rU', **kwargs):
+                 autoclose=True,
+                 mode='r' if sys.version_info >= (3, 4) else 'rU', **kwargs):
         """
         :Parameters:
             - `source`: either a file-like object (which is read directly), or
@@ -215,7 +216,7 @@ class FileInput(Input):
               `sys.stdin` is the source).
             - `mode`: how the file is to be opened (see standard function
               `open`). The default 'rU' provides universal newline support
-              for text files.
+              for text files on Python < 3.4.
         """
         Input.__init__(self, source, source_path, encoding, error_handler)
         self.autoclose = autoclose
